# cal_backend

./: .env  .gitignore  pyproject.toml  run.py  setting.py  settings.py
alembic/: env.py
alembic/versions/: 42a21f5ecca8_.py
app/: __init__.py
app/api/operation/: models.py  schemas.py  views.py
app/api/operations/: models.py  schemas.py  views.py
app/api/operations/tests/: test.py
app/endpoints/: routes.py  urls.py
app/shared/base/: base_model.py  base_schema.py
app/shared/bases/: base_model.py  base_schema.py
